# MEng_MPCC

./: CMakeLists.txt  aut_centerline.csv  get_path_derivatives.m  interpolate_path.m  main_mpcc.m  mpccCostFunction.m  mpccIneqConFunction.m  mpccOutputFunction.m  mpccStateFunction.m  package.xml
config/: controller_params.yaml  ekf.yaml  ekf2.yaml  icp_odometry.yaml  my_controllers.yaml  nav2_params.yaml  rtabmap_params.yaml  rtabmap_stack.yaml
description/: OS0-32.xacro  gazebo_control.xacro  imu_sensor.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  voyager.urdf.xacro  voyager_gazebo.xacro
include/: occupancy_extractor.hpp
include/mpcc/: linear_spline.hpp  linear_spline_visualizer.hpp  mpcc_controller.hpp  optimization_problem.hpp
launch/: all_nodes.launch.py  bringup_launch.py  globals.py  launch_sim.launch.py  localization_launch.py  main_simulation_launch.py  multi_tb3_simulation_launch.py  navigation_launch.py  occupancy_extractor.launch.py  rsp.launch.py  rtabmapOuster.launch.py  rviz_launch.py  slam_launch.py  spawn_launch.py
meshes/: IMU.stl  OS0_32.dae  Voyager.stl  sim_voyager_big_wheel.dae  sim_voyager_body.dae  sim_voyager_small_wheel.dae  voager_measurements.FCStd  voyager_big_wheel.FCStd  voyager_body.FCStd  voyager_small_wheel.FCStd
racetracks/: aut_centerline copy.csv  aut_centerline.csv  corner_centreline.csv  corridor_centreline.csv  figure8.csv  figure8backup.csv  foyer_centreline.csv  gbr_centerline.csv  generate_figure8.py  recorded_path.csv  recorded_path_offset.csv  recorded_path_straight.csv  recorded_path_straight_offset.csv  rtabmap.db
racetracks/install/: local_setup.sh  setup.sh
rviz/: config.rviz  voyager.rviz
scripts/: analyze_benchmark.py  compute_max_curvature.py  frame_transform.py  genbox.py  mpcc_solver_comparison_10hz_all_horizons.csv  mpcc_solver_statistics_10hz_ph15-ch15.csv  mpcc_solver_statistics_10hz_ph3-ch3.csv  mpcc_solver_statistics_10hz_ph8-ch3.csv  mpcc_solver_statistics_10hz_ph8-ch8.csv  overtake_0_detail.csv  overtake_10_detail.csv  overtake_11_detail.csv  overtake_12_detail.csv  overtake_13_detail.csv  overtake_14_detail.csv  overtake_15_detail.csv  overtake_1_detail.csv  overtake_2_detail.csv  overtake_3_detail.csv  overtake_4_detail.csv  overtake_5_detail.csv  overtake_6_detail.csv  overtake_7_detail.csv  overtake_8_detail.csv  overtake_9_detail.csv  overtakes.csv  param_sweep.py  plot_overtakes.py  solver_benchmark_resultsph15ch15.csv  solver_benchmark_resultsph3ch3.csv  solver_benchmark_resultsph8ch3.csv  solver_benchmark_resultsph8ch8.csv  trajectory_viz.py  trajectory_viz_karretjie.py
scripts/autdynobstaclefinal10Hz/: autdynobstaclefinal10Hz_0.db3.zstd  metadata.yaml
src/: actual_path_pub.cpp  contouring_error_node.cpp  karretjie.cpp  karretjie_optimized.cpp  linear_spline.cpp  linear_spline_visualizer.cpp  mpcc.cpp  mpcc_bag_manager.cpp  mpcc_controller.cpp  mpcc_controller_optimized.cpp  mpcc_obstacle.cpp  mpcc_solver_benchmark.cpp  occupancy_extractor.cpp  path_recorder.cpp  system_dynamics_node.cpp
worlds/: aut.world  cafe_world.world  esp.world  gbr.world  hallway_world.sdf  hallway_world_modified.sdf  maze.sdf  mco.world  shapes.sdf  voyager_city.sdf  voyager_city.world  voyager_empty.world
