<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mpcc</name>
    <version>0.0.1</version>
    <description>Model Predictive Contouring Control for Voyager Robot</description>
    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>gazebo_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>ament_index_cpp</depend>
    <depend>sensor_msgs</depend>
    <build_depend>Eigen3</build_depend>
    <build_depend>NLopt</build_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>
    <depend>std_srvs</depend>
    <depend>rosbag2_cpp</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
